Replace PRM main with Trieu-ver2 backend