@@ -1,11 +1,10 @@
 package com.floodrescue.module.relief.service;
 
-import com.floodrescue.module.asset.repository.AssetRepository;
+import com.floodrescue.module.asset.repository.AssetReponsitory;
 import com.floodrescue.module.relief.dto.response.ManagerReliefDispatchDashboardResponse;
-import com.floodrescue.module.relief.repository.ReliefRequestRepository;
+import com.floodrescue.module.relief.reponsitory.ReliefRequestRepository;
 import com.floodrescue.module.team.repository.TeamRepository;
 import com.floodrescue.shared.enums.AssetStatus;
-import com.floodrescue.shared.enums.AssetType;
 import com.floodrescue.shared.enums.InventoryDocumentStatus;
 import com.floodrescue.shared.enums.ReliefDeliveryStatus;
 import lombok.RequiredArgsConstructor;
@@ -16,7 +15,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.Duration;
 import java.time.LocalDateTime;
-import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -26,7 +24,7 @@ public class ManagerReliefDispatchDashboardService {
 
     private final ReliefRequestRepository reliefRequestRepository;
     private final TeamRepository teamRepository;
-    private final AssetRepository assetRepository;
+    private final AssetReponsitory assetRepository;
 
     @Transactional(readOnly = true)
     public ManagerReliefDispatchDashboardResponse getDashboard() {
@@ -72,7 +70,7 @@ public class ManagerReliefDispatchDashboardService {
                         .build())
                 .toList();
 
-        List<ManagerReliefDispatchDashboardResponse.VehicleItem> vehicles = assetRepository.findAll().stream()
+        var vehicles = assetRepository.findAll().stream()
                 .map(a -> ManagerReliefDispatchDashboardResponse.VehicleItem.builder()
                         .id(a.getId())
                         .code(a.getCode())
@@ -84,7 +82,7 @@ public class ManagerReliefDispatchDashboardService {
                         .location(a.getNote())
                         .online(a.getStatus() != AssetStatus.INACTIVE)
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         return ManagerReliefDispatchDashboardResponse.builder()
                 .requests(queue)
@@ -123,12 +121,13 @@ public class ManagerReliefDispatchDashboardService {
         return days + "d trước";
     }
 
-    private String mapAssetType(AssetType assetType) {
+    private String mapAssetType(String assetType) {
         if (assetType == null) return "boat";
-        return switch (assetType) {
-            case CANO -> "cano";
-            case HELICOPTER -> "helicopter";
-            case BOAT -> "boat";
+        String t = assetType.trim().toUpperCase();
+        return switch (t) {
+            case "CANO" -> "cano";
+            case "HELICOPTER" -> "helicopter";
+            case "BOAT" -> "boat";
             default -> "boat";
         };
     }
